feat: add exact Office version push
